cleanup package.json and tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,6 @@
     "verbatimModuleSyntax": true,
     "skipLibCheck": true,
     "declaration": true,
-    "emitDeclarationOnly": true,
-    "outDir": "types"
+    "emitDeclarationOnly": true
   }
 }
