improve docs and readme for unpkg

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   ],
   "module": "dist/cally.js",
   "types": "dist/cally.d.ts",
+  "unpkg": "dist/cally.js",
   "exports": {
     ".": {
       "types": "./dist/cally.d.ts",
