--- a/package.json
+++ b/package.json
@@ -53,5 +53,11 @@
     "typescript": "^5.3.3",
     "vite": "^5.1.4",
     "vite-plugin-dts": "^3.7.3"
+  },
+  "overrides": {
+    "playwright": {
+      ".": "1.50.1",
+      "@web/test-runner-playwright": "0.11.0"
+    }
   }
 }
