upgrade atomico etc

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "verbatimModuleSyntax": true,
     "skipLibCheck": true,
     "declaration": true,
-    "emitDeclarationOnly": true
+    "emitDeclarationOnly": true,
+    "jsx": "react-jsx",
+    "jsxImportSource": "atomico"
   }
 }
