--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
     "noUncheckedIndexedAccess": true,
     "verbatimModuleSyntax": true,
     "skipLibCheck": true,
+    // despite these being in the atomico base config, i need
+    // them here for some reason to avoid tests failing
+    // with "Cannot find module 'react'"
     "declaration": true,
     "emitDeclarationOnly": true,
     "jsx": "react-jsx",
